--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-slate
 title: Practice Blog
-author: Shannon
+author: E. Shannon Tass
+description: This is a cool blog about things I've done.
